added a home page

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,18 @@
         <input type="submit" value="login now" class="btn" />
       </form>
     </header>
+    <section class="home" id="home">
+      <div class="content">
+        <h3>fresh and <span>organic</span> products for your</h3>
+        <p>
+          In food markets worldwide, organic foods represented the first food
+          standards, which defined, audited, and certified a specific food
+          production process rather than specific product properties or
+          composition of the end produc
+        </p>
+        <a href="#" class="btn">shop now</a>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
