created the features and products page

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -79,14 +83,167 @@
       <div class="content">
         <h3>fresh and <span>organic</span> products for your</h3>
         <p>
-          In food markets worldwide, organic foods represented the first food
-          standards, which defined, audited, and certified a specific food
-          production process rather than specific product properties or
-          composition of the end produc
+          Fresh, organic fruits, veggies, and other products are at the heart of
+          what we do. We offer a choice of a variety of healthy organic products
+          for you to choose from at the comfort of your home.
         </p>
         <a href="#" class="btn">shop now</a>
       </div>
     </section>
+    <section class="features" id="features">
+      <h1 class="heading">our <span>features</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="/images/vegetables-3679075_1280.jpg" alt="" width="300px" />
+          <h3>fresh and organic</h3>
+          <p>
+            Our fresh fruit and veggies vary weekly, as we follow the seasonal
+            harvest of local farmers.
+          </p>
+          <a href="#" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img
+            src="/images/online-shopping-6379330_1280.png"
+            alt=""
+            width="300px"
+          />
+          <h3>Easy payment</h3>
+          <p>
+            pay from the comfort of your home, your personal information is kept
+            private and is very secured.
+          </p>
+          <a href="#" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img
+            src="/images/delivery-truck-3331471_1280.png"
+            alt=""
+            width="300px"
+          />
+          <h3>free delivery</h3>
+          <p>Get your order now with our fast and free delivery service</p>
+          <a href="#" class="btn">read more</a>
+        </div>
+      </div>
+    </section>
+    <section class="products" id="products">
+      <h1 class="heading">our <span>products</span></h1>
+      <div class="swiper product-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <img src="/images/blueberries-894839_1280.jpg" alt="" />
+            <h3>fresh blueberries</h3>
+            <div class="price">R19.99/- -R40.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/potatoes-1585060_1280.jpg" alt="" />
+            <h3>fresh potatoes</h3>
+            <div class="price">R29.99/- -R80.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/carrots-3440368_1280.jpg" alt="" />
+            <h3>fresh carrots</h3>
+            <div class="price">R15.99/- -R30.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/pork-523102_1280.jpg" alt="" />
+            <h3>fresh pork</h3>
+            <div class="price">R59.99/- -R90.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+        </div>
+      </div>
+      <div class="swiper product-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <img src="/images/beef-1239136_1280.jpg" alt="" />
+            <h3>fresh beef</h3>
+            <div class="price">R19.99/- -R40.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/peaches-1522680_1280.jpg" alt="" />
+            <h3>fresh peaches</h3>
+            <div class="price">R19.99/- -R40.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/savoy-4637421_1280.jpg" alt="" />
+            <h3>fresh cabbage</h3>
+            <div class="price">R15.99/- -R25.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/cereal-1887237_1280.jpg" alt="" />
+            <h3>fresh milk</h3>
+            <div class="price">R39.99/- -R60.00/-</div>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href="#" class="btn">Add to cart</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
