--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,37 @@
         </div>
       </div>
     </section>
+
+    <section class="categories" id="categories">
+      <h1 class="heading">product <span>categories</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="/images/onions-1238332_1280.jpg" alt="" width="300px" />
+          <h3>vegitables</h3>
+          <p>upto 50% off</p>
+          <a href="#" class="btn">shop now</a>
+        </div>
+        <div class="box">
+          <img src="/images/blueberries-894839_1280.jpg" alt="" width="300px" />
+          <h3>fresh fruits</h3>
+          <p>upto 50% off</p>
+          <a href="#" class="btn">shop now</a>
+        </div>
+        <div class="box">
+          <img src="/images/cereal-1887237_1280.jpg" alt="" width="300px" />
+          <h3>dairy products</h3>
+          <p>upto 50% off</p>
+          <a href="#" class="btn">shop now</a>
+        </div>
+        <div class="box">
+          <img src="/images/beef-1239136_1280.jpg" alt="" width="300px" />
+          <h3>fresh meat</h3>
+          <p>upto 50% off</p>
+          <a href="#" class="btn">shop now</a>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="script.js"></script>
