updated the width of images

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
       <h1 class="heading">our <span>features</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="/images/vegetables-3679075_1280.jpg" alt="" width="300px" />
+          <img src="/images/vegetables-3679075_1280.jpg" alt="" />
           <h3>fresh and organic</h3>
           <p>
             Our fresh fruit and veggies vary weekly, as we follow the seasonal
@@ -103,11 +103,7 @@
           <a href="#" class="btn">read more</a>
         </div>
         <div class="box">
-          <img
-            src="/images/online-shopping-6379330_1280.png"
-            alt=""
-            width="300px"
-          />
+          <img src="/images/online-shopping-6379330_1280.png" alt="" />
           <h3>Easy payment</h3>
           <p>
             pay from the comfort of your home, your personal information is kept
@@ -116,11 +112,7 @@
           <a href="#" class="btn">read more</a>
         </div>
         <div class="box">
-          <img
-            src="/images/delivery-truck-3331471_1280.png"
-            alt=""
-            width="300px"
-          />
+          <img src="/images/delivery-truck-3331471_1280.png" alt="" />
           <h3>free delivery</h3>
           <p>Get your order now with our fast and free delivery service</p>
           <a href="#" class="btn">read more</a>
@@ -183,10 +175,7 @@
             </div>
             <a href="#" class="btn">Add to cart</a>
           </div>
-        </div>
-      </div>
-      <div class="swiper product-slider">
-        <div class="swiper-wrapper">
+
           <div class="swiper-slide box">
             <img src="/images/beef-1239136_1280.jpg" alt="" />
             <h3>fresh beef</h3>
@@ -247,25 +236,25 @@
       <h1 class="heading">product <span>categories</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="/images/onions-1238332_1280.jpg" alt="" width="300px" />
+          <img src="/images/onions-1238332_1280.jpg" alt="" />
           <h3>vegitables</h3>
           <p>upto 50% off</p>
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="/images/blueberries-894839_1280.jpg" alt="" width="300px" />
+          <img src="/images/blueberries-894839_1280.jpg" alt="" />
           <h3>fresh fruits</h3>
           <p>upto 50% off</p>
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="/images/cereal-1887237_1280.jpg" alt="" width="300px" />
+          <img src="/images/cereal-1887237_1280.jpg" alt="" />
           <h3>dairy products</h3>
           <p>upto 50% off</p>
           <a href="#" class="btn">shop now</a>
         </div>
         <div class="box">
-          <img src="/images/beef-1239136_1280.jpg" alt="" width="300px" />
+          <img src="/images/beef-1239136_1280.jpg" alt="" />
           <h3>fresh meat</h3>
           <p>upto 50% off</p>
           <a href="#" class="btn">shop now</a>
