added the reviews, blogs pages and the footer

--- a/src/index.html
+++ b/src/index.html
@@ -261,6 +261,180 @@
         </div>
       </div>
     </section>
+    <section class="review" id="review">
+      <h1 class="heading">customer's <span>review</span></h1>
+      <div class="swiper review-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide box">
+            <img src="/images/man-1690965_1280.jpg" alt="" />
+            <p>
+              Lovely, delicious products, that I'm thoroughly enjoying eating
+              here, thanks.The products and pricing was good. Received the
+              products well in time. Things were nicely packed.Once again
+              Jilings Online scores well for their superb customer service.
+            </p>
+            <h3>Chris deo</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+          <div class="swiper-slide box">
+            <img src="/images/woman-6375307_1280.jpg" alt="" />
+            <p>
+              I always find what I am looking for in Jilings grocery items
+              (unless they are sold out at that time) and the delivery is quick.
+              The best thing I like about Grocery Online is their gesture- they
+              always send a note to say thank you with some of everyone's
+              favourite candies.
+            </p>
+            <h3>Neera baker</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+
+          <div class="swiper-slide box">
+            <img src="/images/woman-628928_1280.jpg" alt="" />
+            <p>
+              Great service and excellent delivery. Not one item was missing and
+              if there was a substitute then that was intimated via
+              email.Excellent service as always, on prompt delivery. One of the
+              item was wrongly delivered but they exchanged it quickly without
+              any hassle.
+            </p>
+            <h3>Cindy ngcobo</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="blogs" id="blogs">
+      <h1 class="heading">our <span>blogs</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="/images/groceries-5216715_640.jpg" alt="" />
+          <div class="content">
+            <div class="icons">
+              <a href="#"> <i class="fas fa-user"></i>by user </a>
+              <a href="#"> <i class="fas fa-calendar"></i>05 March 2024 </a>
+            </div>
+            <h3>Fresh and organic vegitables and fruits</h3>
+            <p>
+              This article discusses how personalised nutrition plans can be
+              effective for managing chronic diseases such as diabetes and heart
+              disease. It covers the top nutrition facts and essential
+              considerations for creating a nutrition plan, as well as the
+              benefits of incorporating organic produce into your diet. The
+              article also provides healthy and delicious recipes to try, along
+              with additional resources for further reading.
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+        <div class="box">
+          <img src="/images/garlic-8227658_640.jpg" alt="" />
+          <div class="content">
+            <div class="icons">
+              <a href="#"> <i class="fas fa-user"></i>by user </a>
+              <a href="#"> <i class="fas fa-calendar"></i>05 March 2024 </a>
+            </div>
+            <h3>Fresh and organic vegitables and fruits</h3>
+            <p>
+              This article discusses how personalised nutrition plans can be
+              effective for managing chronic diseases such as diabetes and heart
+              disease. It covers the top nutrition facts and essential
+              considerations for creating a nutrition plan, as well as the
+              benefits of incorporating organic produce into your diet. The
+              article also provides healthy and delicious recipes to try, along
+              with additional resources for further reading.
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+        <div class="box">
+          <img src="/images/ham-3130701_640.jpg" alt="" />
+          <div class="content">
+            <div class="icons">
+              <a href="#"> <i class="fas fa-user"></i>by user </a>
+              <a href="#"> <i class="fas fa-calendar"></i>05 March 2024 </a>
+            </div>
+            <h3>Fresh meat</h3>
+            <p>
+              Livestock producers are the corner stone of the company and the
+              meat value-chain. Interaction between the company and the
+              livestock producers is vital. A combination of quality products
+              and expertise are combined to deliver the best final product.
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>jilings <i class="fas fa-shopping-basket"></i></h3>
+          <p>the best fresh and organic food for you at an affordable price</p>
+          <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+          </div>
+        </div>
+        <div class="box">
+          <h3>contact info</h3>
+          <a href="#" class="links">
+            <i class="fas fa-phone"></i>+27846006208
+          </a>
+          <a href="#" class="links">
+            <i class="fas fa-envelope"></i>jiliandile8@gmail.com
+          </a>
+          <a href="#" class="links">
+            <i class="fas fa-map-marker-alt"></i>Boardwalk Inkwazi shopping
+            centre, krugerrand grove,Richards bay Central,Richards bay.
+          </a>
+        </div>
+        <div class="box">
+          <h3>quick links</h3>
+          <a href="#" class="links"><i class="fas fa-arrow-right"></i>home</a>
+          <a href="#" class="links"
+            ><i class="fas fa-arrow-right"></i>features</a
+          >
+          <a href="#" class="links"
+            ><i class="fas fa-arrow-right"></i>products</a
+          >
+          <a href="#" class="links"
+            ><i class="fas fa-arrow-right"></i>categories</a
+          >
+          <a href="#" class="links"><i class="fas fa-arrow-right"></i>review</a>
+          <a href="#" class="links"><i class="fas fa-arrow-right"></i>blogs</a>
+        </div>
+        <div class="box">
+          <h3>newsLetter</h3>
+          <p>subscribe for latest updates</p>
+          <input type="email" placeholder="enter your email" class="email" />
+          <input type="submit" value="subscribe" class="btn" />
+        </div>
+      </div>
+      <div class="credit">
+        created by <span>Andile Jili</span> all rights reserved
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
