added link to github

--- a/index.html
+++ b/index.html
@@ -432,7 +432,14 @@
         </div>
       </div>
       <div class="credit">
-        created by <span>Andile Jili</span> all rights reserved
+        created by <span>Andile Jili</span> open source
+        <a
+          href="https://github.com/Andile-1/jilings-market"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          on github
+        </a>
       </div>
     </section>
 
